fix: Removed the double scroll bar on Chrome

--- a/src/app/pages/readme/readme.component.scss
+++ b/src/app/pages/readme/readme.component.scss
@@ -1,7 +1,7 @@
 @use 'globals' as g;
 
 .wrapper {
-  height: 100vh;
+  height: 96vh;
   overflow-y: auto;
   overflow-x: hidden;
   perspective: 10px;
